--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
+  <link rel="stylesheet" href="./dist/app.css">
 </head>
 <body>
   <div id="root"></div>
-  <script type="text/javascript" src="./bundle.js"></script>
+  <script type="text/javascript" src="./dist/bundle.js"></script>
 </body>
 </html>
