--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>CSS-Typesetter</title>
   <link rel="stylesheet" href="./dist/app.css">
 </head>
 <body>
